tests/tests/ui/not-a-struct.rs
use tsap::param;

#[param]
enum Param {
    NotAStruct(usize),
}

fn main() {}
